# Quadruped-Robot-Leg

./: LICENSE  README.md  geogebra-calculs.ggb
3D_design/: .gitignore  README.md
3D_design/leg/: arm_holder.stl  arm_separator.stl  foot_holder_part2.stl  forearm_gear_arm.stl  forearm_gear_knee.stl  forearm_separator_part1.stl  forearm_separator_part2.stl  shoulder_case.stl  shoulder_holder_back.stl  shoulder_separator.stl
3D_design/openTorque/: magnet_holder.stl  planet_carrier_2_acisre.stl
3D_print/: README.md
3D_print/leg/: arm_case_lid.stl  arm_case_part1.stl  (+34 more)
control/: Cargo.toml  Dockerfile  README.md  geometry.py  leg.py  motor.py  params.json  params.py  prints.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py
control/controller/: .gitignore  Cargo.toml  test.py
control/controller/src/: leg.rs  leg_py_lib.rs  main.rs
control/controller/src/services/: geometry.rs  leg.rs
control/dev/: params.json  params.py  prints.py  requirements.txt  simu_config.prc  simulation.py  test.py
control/first_controller_full_python/: leg.py
control/first_tests_fully_in_python/: geometry.py  prints.py  requirements.txt  setup.py
control/first_tests_fully_in_python/tests/: test_leg_class.py
control/src/: leg.rs  leg_module.rs  leg_py_lib.rs  main.rs  motor_module.rs  robot_module.rs
control/src/odrive/: mod.rs
control/src/odrive/commands/: mod.rs
control/src/odrive/enumerations/: errors.rs  mod.rs
control/tests/: test_leg.ipynb  test_leg.py  test_leg_class.ipynb  test_leg_class.py  test_motor.ipynb
openTorqueFiles/: sun_gear_acisre.stl
(+8 files in other folders)
